# directory-permission-watcher

./: .gitignore  Cargo.toml  README.md  index.js  library.js  package.json
.github/workflows/: build.yml
src/: chmod.rs  common_path.rs  error.rs  lib.rs  main.rs  permissions.rs  watcher.rs
