[package]
name = "directory-permission-watcher"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version = "1.7.3", features = ["napi4", "serde-json"]}
napi-derive = "1.1.0"
notify = "5.0.0-pre.13"
futures = "0.3.17"
file-mode = "0.1.2"
tokio = { version = "1.12.0", features = ["full"] }

[build-dependencies]
napi-build = "1.0.2"
