[package]
name = "directory-permission-watcher"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.0.0-pre.15"
file-mode = "0.1.2"
tokio = { version = "1.19.2", features = [
  "sync",
  "rt-multi-thread",
  "macros",
  "time",
] }
